Added the logo, Made mixins for clicking on items and for receiving messages in chat

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,10 @@ dependencies {
 
 	modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:3.3.0-beta.1+1.20.2")
 
+	//modImplementation("com.github.wynntils:*")
+
+	//modImplementation("com.wynntils.fabric.WynntilsModFabric");
+
 	modApi "com.terraformersmc:modmenu:8.0.1"
 }
 
