--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,12 @@ repositories {
 	maven { url "https://maven.terraformersmc.com/releases/" }
 	maven { url "https://maven.isxander.dev/releases" }
 	maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+
+	mavenLocal()
+	maven {
+		name 'Gegy'
+		url 'https://maven.gegy.dev'
+	}
 }
 
 loom {
@@ -51,6 +57,8 @@ dependencies {
 	//}
 
 	modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:3.3.0-beta.1+1.20.2")
+
+	//include modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
 	//modImplementation("com.github.wynntils:*")
 
