--- a/gradle.properties
+++ b/gradle.properties
@@ -9,9 +9,10 @@ yarn_mappings=1.20.2+build.4
 loader_version=0.15.3
 
 # Mod Properties
-mod_version=0.1.1
+mod_version=0.1.2
 maven_group=com.provinceofmusic
 archives_base_name=provinceofmusic
 
 # Dependencies
 fabric_version=0.91.3+1.20.2
+#spruceui_version=5.0.3+1.20.2
