--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ repositories {
 
 	mavenCentral()
 
+	maven { url = "https://pkgs.dev.azure.com/djtheredstoner/DevAuth/_packaging/public/maven/v1" }
 	maven { url "https://maven.shedaniel.me/" }
 	maven { url "https://maven.terraformersmc.com/releases/" }
 	maven { url "https://maven.isxander.dev/releases" }
@@ -29,6 +30,13 @@ repositories {
 		name 'Gegy'
 		url 'https://maven.gegy.dev'
 	}
+
+	maven {
+		name = "TarsosDSP repository"
+		url = "https://mvn.0110.be/releases"
+	}
+
+	maven { url  "https://jitpack.io" }
 }
 
 loom {
@@ -45,12 +53,23 @@ loom {
 
 dependencies {
 	// To change the versions see the gradle.properties file
+	implementation fileTree(dir: 'libs', include: ['*.jar'])
+
+	implementation 'be.tarsos.dsp:core:2.5'
+	implementation 'be.tarsos.dsp:jvm:2.5'
+
+	implementation "com.github.philburk:jsyn:latest.release"
+
+	implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	modRuntimeOnly("me.djtheredstoner:DevAuth-fabric:1.2.0")
 
 	//modApi("me.shedaniel.cloth:cloth-config-fabric:10.1.105") {
 	//	exclude(group: "net.fabricmc.fabric-api")
