--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'fabric-loom' version '1.4-SNAPSHOT'
+	id 'fabric-loom' version '1.6-SNAPSHOT'
 	id 'maven-publish'
 }
 
@@ -23,7 +23,7 @@ repositories {
 	maven { url "https://maven.shedaniel.me/" }
 	maven { url "https://maven.terraformersmc.com/releases/" }
 	maven { url "https://maven.isxander.dev/releases" }
-	maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
+	//maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
 
 	mavenLocal()
 	maven {
@@ -32,15 +32,20 @@ repositories {
 	}
 
 	maven {
-		name = "TarsosDSP repository"
-		url = "https://mvn.0110.be/releases"
+		name = "CottonMC"
+		url = "https://server.bbkr.space/artifactory/libs-release"
 	}
 
-	maven { url  "https://jitpack.io" }
+	//maven {
+	//	name = "TarsosDSP repository"
+	//	url = "https://mvn.0110.be/releases"
+	//}
+
+	//maven { url  "https://jitpack.io" }
 }
 
 loom {
-    splitEnvironmentSourceSets()
+	splitEnvironmentSourceSets()
 
 	mods {
 		"provinceofmusic" {
@@ -55,12 +60,12 @@ dependencies {
 	// To change the versions see the gradle.properties file
 	implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-	implementation 'be.tarsos.dsp:core:2.5'
-	implementation 'be.tarsos.dsp:jvm:2.5'
+	//implementation 'be.tarsos.dsp:core:2.5'
+	//implementation 'be.tarsos.dsp:jvm:2.5'
 
-	implementation "com.github.philburk:jsyn:latest.release"
+	//implementation "com.github.philburk:jsyn:latest.release"
 
-	implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
+	//implementation group: 'org.apache.commons', name: 'commons-math3', version: '3.6.1'
 
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
@@ -75,7 +80,7 @@ dependencies {
 	//	exclude(group: "net.fabricmc.fabric-api")
 	//}
 
-	modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:3.3.0-beta.1+1.20.2")
+	//modImplementation("dev.isxander.yacl:yet-another-config-lib-fabric:3.3.0-beta.1+1.20.2")
 
 	//include modImplementation("dev.lambdaurora:spruceui:${project.spruceui_version}")
 
@@ -83,7 +88,9 @@ dependencies {
 
 	//modImplementation("com.wynntils.fabric.WynntilsModFabric");
 
-	modApi "com.terraformersmc:modmenu:8.0.1"
+	modApi "com.terraformersmc:modmenu:11.0.1"
+
+	modImplementation include("io.github.cottonmc:LibGui:11.0.0+1.21")
 }
 
 processResources {
@@ -95,7 +102,7 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	it.options.release = 17
+	it.options.release = 21
 }
 
 java {
@@ -104,8 +111,8 @@ java {
 	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 
-	sourceCompatibility = JavaVersion.VERSION_17
-	targetCompatibility = JavaVersion.VERSION_17
+	sourceCompatibility = JavaVersion.VERSION_21
+	targetCompatibility = JavaVersion.VERSION_21
 }
 
 jar {
